# 3ds-Plug-n-play

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: canary_release.yml  draft_release.yml  lint_test_build.yml
example_plugin/: Cargo.toml
example_plugin/src/: lib.rs
launcher/: Makefile  pnp_launcher.rsf
launcher/include/: launch.h
launcher/source/: launch.c  main.cpp
pnp_lib/: Cargo.toml
pnp_lib/src/: bindings.rs  input.rs  memory.rs  print.rs
pnp_sys/: Cargo.toml  Makefile  pnp.rsf
pnp_sys/src/: context.rs  frame_pause.rs  log.rs  main.rs  notification.rs  request_handler.rs
pnp_sys/src/display/: color.rs  context.rs  mod.rs  pixel.rs  screen.rs  text_printer.rs
pnp_sys/src/hook/: mod.rs  patch.rs  pnp_session.rs  title_id.rs
pnp_sys/src/memory/: game_memory.rs  mod.rs  region.rs  safe_slice.rs
pnp_sys/src/plugin_runner/: mod.rs  runner.rs
pnp_sys/src/plugin_runner/loader/: circular_counter.rs  instance.rs  menu.rs  mod.rs
pnp_sys/src/plugin_runner/wasm/: host_api.rs  instance.rs  mod.rs
