[package]
name = "pnp_sys"
version = "0.1.1"
authors = ["zaksabeast <19464008+zaksabeast@users.noreply.github.com>"]
edition = "2021"
publish = false

[dependencies]
ctr = { git = "https://github.com/zaksabeast/libctr-rs.git", rev = "f319e30" }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4bc5adf" } 
num_enum = { version = "0.5", default-features = false }
wasmi = { version = "0.19", default-features = false }

[features]
default = []
mode3 = []
